# libkeri

./: .gitignore  Cargo.toml  README.md
.github/workflows/: kerilib-rust-ci.yml
docs/: matter_impl.md  prompt_plan.md  spec.md  todo.md
src/: cesr.rs  errors.rs  lib.rs  main.rs  matter.rs
src/cesr/: bexter.rs  cigar.rs  dater.rs  diger.rs  ilker.rs  labeler.rs  mod.rs  number.rs  pather.rs  prefixer.rs  saider.rs  seqner.rs  tagger.rs  texter.rs  tholder.rs  verfer.rs
src/cesr/counting/: mod.rs
src/cesr/indexing/: mod.rs  siger.rs
src/cesr/signing/: cipher.rs  decrypter.rs  encrypter.rs  mod.rs  salter.rs  signer.rs
src/hio/: errors.rs  filing.rs  helping.rs  hicting.rs  mod.rs
src/keri/: mod.rs  parsing.rs
src/keri/app/: configing.rs  habbing.rs  mod.rs
src/keri/app/keeping/: creators.rs  keeper.rs  manager.rs  mod.rs
src/keri/core/: errors.rs  filing.rs  mod.rs  parsing.rs
src/keri/core/eventing/: incept.rs  interact.rs  kever.rs  kevery.rs  mod.rs  query.rs  receipt.rs  reply.rs  rotate.rs  state.rs
src/keri/core/routing/: mod.rs  revery.rs  route.rs  router.rs
src/keri/core/serdering/: mod.rs  sad.rs
src/keri/db/: dbing.rs  errors.rs  koming.rs  mod.rs
src/keri/db/basing/: habitat_record.rs  key_state_record.rs  mod.rs
src/keri/db/dbing/: keys.rs  mod.rs
src/keri/db/subing/: catcesr.rs  catcesrioset.rs  cesr.rs  cesrioset.rs  dup.rs  iodup.rs  ioset.rs  mod.rs  on.rs  oniodup.rs  serder.rs  signer.rs
src/keri/help/: helping.rs  mod.rs
src/keri/serdering/: mod.rs
src/resources/: 100-evt.cesr  11-evt.cesr  20-evt.cesr  55-evt.cesr  9-rot.cesr
