[package]
name = "libkeri"
version = "0.1.0"
edition = "2024"

[dependencies]
[package]
name = "libkeri"
version = "0.1.0"
edition = "2021"
description = "A Rust library for KERI (Key Event Receipt Infrastructure)"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sodiumoxide = "0.2.7"

[lib]
name = "libkeri"
path = "src/lib.rs"

[[bin]]
name = "keri"
path = "src/main.rs"
