[package]
name = "libkeri"
version = "0.1.0"
edition = "2021"
description = "A Rust library for KERI (Key Event Receipt Infrastructure)"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = "1.6.1"
blake2 = "0.10.6"  # Current version as of now
base64 = "0.22.1"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
thiserror = "2.0.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sodiumoxide = "0.2.7"
libsodium-sys = "0.2.7"
num-bigint = "0.4.6"
num-traits = "0.2.19"
chrono = "0.4.40"
once_cell = "1.20.3"
secp256k1 = { version="0.30.0", features = ["alloc", "rand", "std", "hashes"]}  # Current version as of now
p256 = "0.13.2"
rand_core = "0.6.4"
sha2 = "0.10.8"
rand = "0.8.5"
sha3 = "0.11.0-pre.5"
regex = "1.11.1"
num-rational = "0.4.1"
async-trait = "0.1.88"
tempfile = "3.10.1"   # For temporary directory management
dirs = "6.0.0"        # For home directory expansion
heed = "0.22.0"
rmp-serde = "1.3.0"
serde_cbor = "0.11.2"
indexmap = { version = "2.9.0", features = ["serde"] }
lazy_static = "1.5.0"
futures = "0.3.30"


[lib]
name = "libkeri"
path = "src/lib.rs"

[[bin]]
name = "keri"
path = "src/main.rs"

[profile.dev]
incremental = true

[profile.test]
incremental = true
